Add main content, images, and styles for Macao Internacional website

--- a/index.html
+++ b/index.html
@@ -145,5 +145,352 @@
             </svg>
         </div>
     </section>
+
+    <!-- About Section -->
+    <section class="about">
+        <!-- Trusted Brands -->
+        <div class="trusted-brands">
+            <div class="container">
+                <p class="trusted-title">Confiado por empresas de toda América.</p>
+                <div class="brands-logos">
+                    <div class="brand-logo">WiWU</div>
+                    <div class="brand-logo">Panamá</div>
+                    <div class="brand-logo">Colombia</div>
+                    <div class="brand-logo">Costa Rica</div>
+                    <div class="brand-logo">Caribe</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Main About Content -->
+        <div class="about-content-wrapper">
+            <div class="container">
+                <div class="about-content">
+                    <!-- Left Column -->
+                    <div class="about-left">
+                        <!-- Badge -->
+                        <div class="badge-dark">
+                            <span class="badge-icon">🏢</span>
+                            <span class="badge-text">Quiénes somos</span>
+                        </div>
+
+                        <!-- Title -->
+                        <h2 class="about-title">
+                            Conectamos América con tecnología de calidad.
+                        </h2>
+
+                        <!-- Description -->
+                        <p class="about-description">
+                            Macao Internacional S.A. es una empresa líder en la distribución de productos electrónicos. Importamos y exportamos artículos de tecnología de la reconocida marca WiWU, ofreciendo soluciones a distribuidores, mayoristas y clientes al detal en Suramérica, Centroamérica y el Caribe.
+                        </p>
+
+                        <!-- CTA Button -->
+                        <button class="btn btn-primary">Conoce más</button>
+
+                        <!-- Small Image -->
+                        <div class="about-image-small">
+                            <div class="image-placeholder-small">
+                                <div class="placeholder-overlay"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Right Column -->
+                    <div class="about-right">
+                        <div class="about-image-large">
+                            <div class="image-placeholder-large">
+                                <div class="placeholder-overlay-large"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Stats Section -->
+                <div class="stats-section">
+                    <div class="stat-card">
+                        <div class="stat-value">10+</div>
+                        <div class="stat-label">Años de experiencia</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-value">8+</div>
+                        <div class="stat-label">Países cubiertos</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-value">500+</div>
+                        <div class="stat-label">Clientes satisfechos</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Products Section -->
+    <section class="products">
+        <div class="container">
+            <!-- Section Header -->
+            <div class="section-header">
+                <div class="badge">
+                    <span class="badge-icon">📦</span>
+                    <span class="badge-text">Productos</span>
+                </div>
+                <h2 class="section-title">Tecnología WiWU para cada necesidad</h2>
+                <p class="section-subtitle">Porque la rapidez no es suficiente, necesitas productos que puedas confiar.</p>
+            </div>
+
+            <!-- Product Cards -->
+            <div class="product-cards">
+                <!-- Card 1 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <div class="product-avatars">
+                            <div class="product-avatar">📱</div>
+                            <div class="product-avatar">💻</div>
+                            <div class="product-avatar">⌚</div>
+                        </div>
+                        <div class="product-badge">
+                            <span>Desde</span>
+                            <span class="product-price">$5</span>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <h3 class="product-title">Accesorios Apple</h3>
+                        <p class="product-description">Fundas, protectores y accesorios premium para tus dispositivos Apple.</p>
+                    </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="product-card">
+                    <div class="product-image product-image-light">
+                        <div class="product-placeholder"></div>
+                        <div class="product-badge">
+                            <span>Desde</span>
+                            <span class="product-price">$8</span>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <h3 class="product-title">Protectores y Teclados</h3>
+                        <p class="product-description">Protección de pantalla de alta calidad y teclados ergonómicos.</p>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="product-card product-card-featured">
+                    <div class="product-image product-image-red">
+                        <div class="product-placeholder"></div>
+                        <div class="product-badge">
+                            <span>Desde</span>
+                            <span class="product-price">$15</span>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <h3 class="product-title">Audio y Smartwatches</h3>
+                        <p class="product-description">Auriculares premium y smartwatches para un estilo de vida conectado.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Why Choose Us Section -->
+    <section class="why-choose">
+        <div class="container">
+            <!-- Section Header -->
+            <div class="section-header-center">
+                <div class="badge">
+                    <span class="badge-icon">✨</span>
+                    <span class="badge-text">Por qué elegirnos</span>
+                </div>
+                <h2 class="section-title-center">Por qué miles confían en Macao Internacional</h2>
+            </div>
+
+            <!-- Content Grid -->
+            <div class="why-content">
+                <!-- Left Image -->
+                <div class="why-left">
+                    <div class="why-image">
+                        <div class="why-placeholder">
+                            <div class="why-placeholder-overlay"></div>
+                        </div>
+                        <div class="why-join-badge">
+                            <span class="join-icon">👥</span>
+                            <span class="join-text">Únete a más de 500+ clientes</span>
+                        </div>
+                        <div class="why-speed-badge">
+                            <span class="speed-icon">⚡</span>
+                            <span class="speed-text">Garantizado</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Right Features -->
+                <div class="why-right">
+                    <div class="why-features">
+                        <!-- Feature 1 -->
+                        <div class="why-feature">
+                            <div class="feature-number">
+                                <span>01</span>
+                            </div>
+                            <div class="feature-content">
+                                <h3 class="feature-title">Productos originales WiWU</h3>
+                                <p class="feature-description">Importación directa desde Asia con garantía de fábrica.</p>
+                            </div>
+                        </div>
+
+                        <!-- Feature 2 -->
+                        <div class="why-feature">
+                            <div class="feature-number">
+                                <span>02</span>
+                            </div>
+                            <div class="feature-content">
+                                <h3 class="feature-title">Distribución internacional</h3>
+                                <p class="feature-description">Cobertura en 8+ países de América Latina y el Caribe.</p>
+                            </div>
+                        </div>
+
+                        <!-- Feature 3 -->
+                        <div class="why-feature">
+                            <div class="feature-number">
+                                <span>03</span>
+                            </div>
+                            <div class="feature-content">
+                                <h3 class="feature-title">Precios competitivos</h3>
+                                <p class="feature-description">Los mejores precios mayoristas y al detal del mercado.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <p class="why-footer-text">Envíos seguros, rápidos y con seguimiento a todo el continente.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section class="testimonials">
+        <div class="container">
+            <!-- Section Header -->
+            <div class="section-header-center">
+                <div class="badge">
+                    <span class="badge-icon">💬</span>
+                    <span class="badge-text">Testimonios</span>
+                </div>
+                <h2 class="section-title-center">Lo que dicen nuestros clientes</h2>
+                <p class="section-subtitle-center">Así es como Macao Internacional está transformando el negocio tecnológico en toda América.</p>
+            </div>
+
+            <!-- Testimonial Cards -->
+            <div class="testimonial-grid">
+                <!-- Testimonial 1 -->
+                <div class="testimonial-card testimonial-large">
+                    <div class="testimonial-avatar-wrapper">
+                        <div class="testimonial-avatar"></div>
+                    </div>
+                    <div class="testimonial-content">
+                        <div class="quote-icon">"</div>
+                        <p class="testimonial-text">Gracias a Macao Internacional pudimos mejorar nuestro inventario y ofrecer productos de primera calidad a nuestros clientes.</p>
+                        <p class="testimonial-author">— Distribuidor, Medellín</p>
+                    </div>
+                </div>
+
+                <!-- Testimonial 2 -->
+                <div class="testimonial-card testimonial-video">
+                    <div class="testimonial-video-wrapper">
+                        <div class="testimonial-video-avatar"></div>
+                        <div class="video-play-btn">▶</div>
+                    </div>
+                </div>
+
+                <!-- Testimonial 3 -->
+                <div class="testimonial-card testimonial-large">
+                    <div class="testimonial-content-full">
+                        <div class="testimonial-avatar-small"></div>
+                        <div class="quote-icon">"</div>
+                        <p class="testimonial-text">El equipo es súper atento y el envío llegó puntual. ¡100% recomendados!</p>
+                        <p class="testimonial-author">— Cliente al detal, Costa Rica</p>
+                    </div>
+                </div>
+
+                <!-- Testimonial 4 -->
+                <div class="testimonial-card testimonial-image">
+                    <div class="testimonial-image-wrapper">
+                        <div class="testimonial-image-avatar"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <!-- Newsletter Section -->
+        <div class="newsletter">
+            <div class="container">
+                <div class="newsletter-content">
+                    <div class="newsletter-text">
+                        <h3>Suscríbete para recibir ofertas, catálogos y promociones</h3>
+                    </div>
+                    <div class="newsletter-form">
+                        <input type="email" placeholder="Ingresa tu email aquí" class="newsletter-input">
+                        <button class="newsletter-btn">Suscribirse</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer Main -->
+        <div class="footer-main">
+            <div class="container">
+                <div class="footer-grid">
+                    <!-- Column 1 - Logo -->
+                    <div class="footer-col">
+                        <div class="footer-logo">
+                            <img src="Macao_logo.png" alt="Macao Internacional" class="footer-logo-img">
+                        </div>
+                        <p class="footer-tagline">Tecnología sin fronteras</p>
+                    </div>
+
+                    <!-- Column 2 - Navigation -->
+                    <div class="footer-col">
+                        <h4 class="footer-title">Navegación</h4>
+                        <ul class="footer-links">
+                            <li><a href="#">Inicio</a></li>
+                            <li><a href="#">Productos</a></li>
+                            <li><a href="#">Servicios</a></li>
+                            <li><a href="#">Nosotros</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Column 3 - Contact -->
+                    <div class="footer-col">
+                        <h4 class="footer-title">Contáctanos</h4>
+                        <ul class="footer-contact">
+                            <li>📞 +507 431-3500</li>
+                            <li>📧 info@macaoin.com</li>
+                            <li>📱 @macaointernacionalzl</li>
+                        </ul>
+                    </div>
+
+                    <!-- Column 4 - Location -->
+                    <div class="footer-col">
+                        <h4 class="footer-title">Ubicación</h4>
+                        <p class="footer-address">
+                            Calle 15 y calle E<br>
+                            Paseo Gorgas, Manzana 13B<br>
+                            Panamá
+                        </p>
+                        <div class="footer-languages">
+                            <span class="language-label">Idioma:</span>
+                            <span class="language-active">Es</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Footer Bottom -->
+                <div class="footer-bottom">
+                    <p>&copy; 2025 Macao Internacional S.A. Todos los derechos reservados.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
