--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="header-content">
                 <!-- Logo -->
                 <div class="logo">
-                    <img src="Macao_logo.png" alt="Macao Internacional" class="logo-img">
+                    <img src="images/logo/Macao_logo.png" alt="Macao Internacional" class="logo-img">
                 </div>
 
                 <!-- Navigation -->
@@ -109,19 +109,12 @@
 
                     <!-- Main Image -->
                     <div class="hero-image">
-                        <div class="image-placeholder">
-                            <!-- Placeholder for the main image -->
-                            <div class="placeholder-content">
-                                <div class="person person-1"></div>
-                                <div class="person person-2"></div>
-                                <div class="person person-3"></div>
-                            </div>
-                        </div>
+                        <img src="images/hero/hero-main-image.png" alt="Equipo Macao Internacional" style="width: 100%; height: 100%; object-fit: cover; border-radius: 24px;">
                     </div>
 
                     <!-- Floating Cards -->
                     <div class="floating-card card-top">
-                        <div class="card-image"></div>
+                        <img src="images/hero/hero-card-products.png" alt="Productos WiWU" style="width: 100%; height: 120px; object-fit: cover;">
                         <div class="card-content">
                             <h3>Productos<br>WiWU originales</h3>
                         </div>
@@ -189,18 +182,14 @@
 
                         <!-- Small Image -->
                         <div class="about-image-small">
-                            <div class="image-placeholder-small">
-                                <div class="placeholder-overlay"></div>
-                            </div>
+                            <img src="images/about/about-warehouse-small.png" alt="Bodega Macao Internacional" style="width: 100%; max-width: 400px; height: 220px; object-fit: cover; border-radius: 20px; box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);">
                         </div>
                     </div>
 
                     <!-- Right Column -->
                     <div class="about-right">
                         <div class="about-image-large">
-                            <div class="image-placeholder-large">
-                                <div class="placeholder-overlay-large"></div>
-                            </div>
+                            <img src="images/about/about-team-large.png" alt="Equipo Macao Internacional" style="width: 100%; height: 480px; object-fit: cover; border-radius: 24px; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);">
                         </div>
                     </div>
                 </div>
@@ -241,12 +230,8 @@
             <div class="product-cards">
                 <!-- Card 1 -->
                 <div class="product-card">
-                    <div class="product-image">
-                        <div class="product-avatars">
-                            <div class="product-avatar">📱</div>
-                            <div class="product-avatar">💻</div>
-                            <div class="product-avatar">⌚</div>
-                        </div>
+                    <div class="product-image" style="position: relative; overflow: hidden;">
+                        <img src="images/products/product-apple-accessories.png" alt="Accesorios Apple WiWU" style="width: 100%; height: 280px; object-fit: cover;">
                         <div class="product-badge">
                             <span>Desde</span>
                             <span class="product-price">$5</span>
@@ -260,8 +245,8 @@
 
                 <!-- Card 2 -->
                 <div class="product-card">
-                    <div class="product-image product-image-light">
-                        <div class="product-placeholder"></div>
+                    <div class="product-image product-image-light" style="position: relative; overflow: hidden;">
+                        <img src="images/products/product-protectors-keyboards.png" alt="Protectores y Teclados WiWU" style="width: 100%; height: 280px; object-fit: cover;">
                         <div class="product-badge">
                             <span>Desde</span>
                             <span class="product-price">$8</span>
@@ -275,8 +260,8 @@
 
                 <!-- Card 3 -->
                 <div class="product-card product-card-featured">
-                    <div class="product-image product-image-red">
-                        <div class="product-placeholder"></div>
+                    <div class="product-image product-image-red" style="position: relative; overflow: hidden;">
+                        <img src="images/products/product-audio-smartwatch.png" alt="Audio y Smartwatches WiWU" style="width: 100%; height: 280px; object-fit: cover;">
                         <div class="product-badge">
                             <span>Desde</span>
                             <span class="product-price">$15</span>
@@ -307,10 +292,8 @@
             <div class="why-content">
                 <!-- Left Image -->
                 <div class="why-left">
-                    <div class="why-image">
-                        <div class="why-placeholder">
-                            <div class="why-placeholder-overlay"></div>
-                        </div>
+                    <div class="why-image" style="position: relative;">
+                        <img src="images/why-choose/why-choose-delivery.png" alt="Entrega internacional Macao" style="width: 100%; height: 520px; object-fit: cover; border-radius: 24px; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);">
                         <div class="why-join-badge">
                             <span class="join-icon">👥</span>
                             <span class="join-text">Únete a más de 500+ clientes</span>
@@ -383,7 +366,7 @@
                 <!-- Testimonial 1 -->
                 <div class="testimonial-card testimonial-large">
                     <div class="testimonial-avatar-wrapper">
-                        <div class="testimonial-avatar"></div>
+                        <img src="images/testimonials/testimonial-distributor.png" alt="Distribuidor Medellín" style="width: 120px; height: 120px; border-radius: 16px; object-fit: cover; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);">
                     </div>
                     <div class="testimonial-content">
                         <div class="quote-icon">"</div>
@@ -393,28 +376,26 @@
                 </div>
 
                 <!-- Testimonial 2 -->
-                <div class="testimonial-card testimonial-video">
-                    <div class="testimonial-video-wrapper">
-                        <div class="testimonial-video-avatar"></div>
-                        <div class="video-play-btn">▶</div>
-                    </div>
+                <div class="testimonial-card testimonial-video" style="position: relative; overflow: hidden;">
+                    <img src="images/testimonials/testimonial-video-thumb.png" alt="Video testimonial" style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="video-play-btn">▶</div>
                 </div>
 
                 <!-- Testimonial 3 -->
                 <div class="testimonial-card testimonial-large">
                     <div class="testimonial-content-full">
-                        <div class="testimonial-avatar-small"></div>
-                        <div class="quote-icon">"</div>
-                        <p class="testimonial-text">El equipo es súper atento y el envío llegó puntual. ¡100% recomendados!</p>
-                        <p class="testimonial-author">— Cliente al detal, Costa Rica</p>
+                        <img src="images/testimonials/testimonial-client-cr.png" alt="Cliente Costa Rica" style="width: 100px; height: 100px; border-radius: 16px; object-fit: cover; flex-shrink: 0;">
+                        <div style="flex: 1;">
+                            <div class="quote-icon">"</div>
+                            <p class="testimonial-text">El equipo es súper atento y el envío llegó puntual. ¡100% recomendados!</p>
+                            <p class="testimonial-author">— Cliente al detal, Costa Rica</p>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Testimonial 4 -->
                 <div class="testimonial-card testimonial-image">
-                    <div class="testimonial-image-wrapper">
-                        <div class="testimonial-image-avatar"></div>
-                    </div>
+                    <img src="images/testimonials/testimonial-products-display.png" alt="Productos WiWU" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
             </div>
         </div>
@@ -444,7 +425,7 @@
                     <!-- Column 1 - Logo -->
                     <div class="footer-col">
                         <div class="footer-logo">
-                            <img src="Macao_logo.png" alt="Macao Internacional" class="footer-logo-img">
+                            <img src="images/logo/Macao_logo.png" alt="Macao Internacional" class="footer-logo-img">
                         </div>
                         <p class="footer-tagline">Tecnología sin fronteras</p>
                     </div>
