--- a/index.html
+++ b/index.html
@@ -179,19 +179,26 @@
                                 <span class="star">⭐</span>
                                 <span class="star">⭐</span>
                             </div>
-                            <span class="rating-text">Rating</span>
+                            <span class="rating-text">Rating 5.0</span>
                         </div>
 
                         <div class="customers-section">
-                            <div class="avatars">
+                            <!-- <div class="avatars">
                                 <div class="avatar" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
                                 <div class="avatar" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);"></div>
                                 <div class="avatar" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);"></div>
                                 <div class="avatar" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);"></div>
-                            </div>
+                            </div> -->
                             <div class="customers-info">
                                 <div class="customers-count">500+</div>
                                 <div class="customers-label">Clientes Satisfechos</div>
+                            </div>
+                        </div>
+
+                        <div class="customers-section experience-badge-mobile">
+                            <div class="customers-info">
+                                <div class="customers-count">10+</div>
+                                <div class="customers-label">Años de Experiencia</div>
                             </div>
                         </div>
                     </div>
